# vibeagent

./: .coverage  .env.example  .pre-commit-config.yaml  PRE_COMMIT_SETUP.md  README.md  SETUP_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  test_e2e.py  test_extreme.py  test_postgresql_fulltext.py  test_postgresql_kg.py
api/: requirements.txt
archives/: cleanup_report_20260126_121027.txt
archives/vibeagent_backup_20260126_120842/: quick_context_test.py
archives/vibeagent_backup_20260126_120842/api/: main.py
archives/vibeagent_backup_20260126_120842/archives/vibeagent_backup_20260126_120842/: requirements.txt
archives/vibeagent_backup_20260126_120842/archives/vibeagent_backup_20260126_120842/data/: test_tool_calling.db
archives/vibeagent_backup_20260126_120842/config/: agent_config.json  schema.sql
archives/vibeagent_backup_20260126_120842/core/: agent.py  analytics_dashboard.py  analytics_engine.py  context_manager.py  database_manager.py  plan_execute_orchestrator.py  retry_manager.py  self_corrector.py  tool_orchestrator.py  tot_orchestrator.py
archives/vibeagent_backup_20260126_120842/data/: arxiv_papers.db  demo_error_handler.db  example_parallel.db  llm_capability_test.db  test_parallel.db  vibeagent_enhanced_test.db  vibeagent_simple_test.db
archives/vibeagent_backup_20260126_120842/prompts/: __init__.py  react_prompt.py
archives/vibeagent_backup_20260126_120842/scripts/: README.md  cleanup_project.py
archives/vibeagent_backup_20260126_120842/skills/: arxiv_skill.py  llm_skill.py  pocketbase_skill.py  scraper_skill.py  sqlite_skill.py
archives/vibeagent_backup_20260126_121019/: arxiv_agent.py
archives/vibeagent_backup_20260126_121019/archives/vibeagent_backup_20260126_121019/archives/vibeagent_backup_20260126_121019/: vibeagent.py
archives/vibeagent_backup_20260126_121019/archives/vibeagent_backup_20260126_121019/archives/vibeagent_backup_20260126_121019/tests/: run_llm_tests.py
archives/vibeagent_backup_20260126_121019/archives/vibeagent_backup_20260126_121019/docs/legacy/: LLM_CAPABILITY_TEST_README.md
config/: __init__.py  model_configs.py  ports.json
config/migrations/: 20240124120000_add_paper_tags_table.sql  20240124130000_add_model_configs.sql
config/model_configs/: gpt-4-v1.0.0.json  gpt-4-workflow-v1.json
data/: vibeagent.db
docs/: PLAN_EXECUTE_ORCHESTRATOR.md
examples/: analytics_dashboard_example.py  autonomous_knowledge_base_example.py  context_manager_example.py  dashboard_web.py  error_handler_demo.py  hybrid_search_example.py  model_config_example.py  parallel_execution_example.py  plan_execute_example.py  react_integration_example.py  retry_manager_example.py  self_corrector_example.py  tot_example.py
frontend/: README.md  index.html  package.json
prompts/: README.md  __init__.py  react_prompt.py
scripts/: README.md  cleanup_project.py  init_db.py  migrate_db.py
tests/: README.md  example_db_integration.py  llm_judge.py  llm_tool_calling_tester.py  report_generator.py  run_llm_tests.py  test_cases.py  test_context_manager.py  test_database_manager.py  test_error_handler.py  test_integration.py  test_model_configs.py  test_parallel_executor.py  test_plan_execute_orchestrator.py  test_retry_manager.py  test_self_corrector.py  test_tot_orchestrator.py
utils/: ports.py
vibeagent/: __init__.py  __main__.py  cli.py
vibeagent/api/: __init__.py  main.py
vibeagent/config/: MODEL_CONFIGS_README.md  __init__.py  agent_config.json  config.py  model_configs.py  ports.json  schema.sql
vibeagent/config/migrations/: 20240124120000_add_paper_tags_table.sql  README.md
vibeagent/config/model_configs/: gpt-4-v1.0.0.json  gpt-4-workflow-v1.json
vibeagent/core/: __init__.py  agent.py  analytics_dashboard.py  analytics_engine.py  autonomous_research_agent.py  context_manager.py  continuous_learning_loop.py  database_manager.py  error_handler.py  hybrid_orchestrator.py  hybrid_search_orchestrator.py  knowledge_quality_evaluator.py  multi_agent_collaboration.py  parallel_executor.py  plan_execute_orchestrator.py  retry_manager.py  self_corrector.py  skill.py  temporal_knowledge_graph.py  tool_orchestrator.py  tot_orchestrator.py
vibeagent/scripts/: __init__.py  migrate.py
vibeagent/skills/: __init__.py  arxiv_skill.py  elasticsearch_skill.py  entity_extraction_skill.py  firecrawl_skill.py  llm_skill.py  multimodal_skill.py  neo4j_skill.py  postgresql_fulltext_skill.py  postgresql_skill.py  qdrant_skill.py  scraper_skill.py  sqlite_skill.py
vibeagent/utils/: __init__.py
