[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibeagent"
version = "2.0.0"
description = "A clean agentic system for searching and summarizing arXiv papers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VibeAgent Team"},
]
keywords = ["agent", "llm", "arxiv", "research", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    # Data Validation
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    # HTTP Client
    "requests>=2.32.0,<3.0.0",
    # arXiv Integration
    "arxiv>=2.4.0,<3.0.0",
    # Web Scraping
    "beautifulsoup4>=4.12.0,<5.0.0",
    # Database
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pysqlite3-binary>=0.5.0,<1.0.0",
    # Configuration
    "pyyaml>=6.0,<7.0.0",
    # Documentation
    "docstring-parser>=0.15,<1.0.0",
    # CLI
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "structlog>=25.5.0",
    "prometheus-client>=0.24.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0,<9.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.25.0,<1.0.0",

    # Code Quality
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "pre-commit>=3.5.0,<4.0.0",

    # Documentation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
    "mkdocstrings[python]>=0.23.0,<1.0.0",

    # Profiling
    "line-profiler>=4.1.0,<5.0.0",
    "memory-profiler>=0.60.0,<1.0.0",
]

lint = [
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

test = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.25.0,<1.0.0",
]

docs = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
    "mkdocstrings[python]>=0.23.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/vibeagent/vibeagent"
Documentation = "https://vibeagent.readthedocs.io"
Repository = "https://github.com/vibeagent/vibeagent.git"
Issues = "https://github.com/vibeagent/vibeagent/issues"

[project.scripts]
vibeagent = "vibeagent.cli:app"
vibeagent-api = "vibeagent.api.main:main"
vibeagent-migrate = "vibeagent.scripts.migrate:app"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ANN",# flake8-annotations
    "S",  # flake8-bandit
    "BLE",# flake8-blind-except
    "C90",# mccabe complexity
    "DTZ",# flake8-datetimez
    "EM", # flake8-errmsg
    "EXE",# flake8-executable
    "ISC",# flake8-implicit-str-concat
    "ICN",# flake8-import-conventions
    "G",  # flake8-logging-format
    "INP",# flake8-no-pep420
    "PIE",# flake8-pie
    "T20",# flake8-print
    "PYI",# flake8-pyi
    "PT", # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE",# flake8-raise
    "RET",# flake8-return
    "SLF",# flake8-self
    "SLOT",# flake8-slots
    "SIM",# flake8-simplify
    "TID",# flake8-tidy-imports
    "TCH",# flake8-type-checking
    "ARG",# flake8-unused-arguments
    "PTH",# flake8-use-pathlib
    "TD", # flake8-todos
    "FIX",# flake8-fixme
    "ERA",# eradicate
    "PD", # pandas-vet
    "PGH",# pygrep-hooks
    "PL", # pylint
    "TRY",# tryceratops
    "FLY",# flynt
    "NPY",# numpy-specific rules
    "AIR",# airflow
    "PERF",# perflint
    "FURB",# refurb
    "LOG",# flake8-logging
]
ignore = [
    "ISC001", # Conflicts with formatter
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in method
    "E501",   # Line too long (handled by ruff formatter)
    "PGH003", # Use specific rule codes when ignoring type issues
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "ANN", "ARG", "PLR2004"]
"scripts/**/*" = ["T20", "INP001"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["arxiv.*", "bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=vibeagent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with -m not slow)",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["vibeagent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/scripts/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
target-version = ['py310']
line-length = 100
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''
